--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "WebPack_5",
+  "name": "webpack_5",
   "version": "1.0.0",
   "description": "Template webpack5",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
+    "dev": "webpack serve --env develop",
+    "lint": "src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,9 +21,15 @@
   },
   "homepage": "https://github.com/SpiriT-L/WebPack-template#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.3.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-typescript": "^14.0.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.3.0",
     "sass": "^1.42.1",
@@ -29,6 +37,7 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.54.0",
-    "webpack-cli": "^4.8.0"
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.3.0"
   }
 }
